# local-llm

./: .pre-commit-config.yaml  Cargo.toml  flake.nix
config/: config.example.toml
nix/: module.nix  package.nix  vm.nix
rslib/local-llm-cli/: Cargo.toml
rslib/local-llm-cli/src/: client.rs  main.rs
rslib/local-llm-config/: Cargo.toml
rslib/local-llm-config/src/: lib.rs  runtime.rs  schema.rs  swap.rs
rslib/local-llm-resourced/: Cargo.toml
rslib/local-llm-resourced/src/: main.rs  monitor.rs  server.rs  state.rs
