[workspace]
resolver = "2"
members = [
    "rslib/local-llm-config",
    "rslib/local-llm-resourced",
    "rslib/local-llm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Morgan Winters"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
sd-notify = "0.4"

local-llm-config = { path = "rslib/local-llm-config" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
