[package]
name = "local-llm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "local-llm command line interface"

[[bin]]
name = "local-llm"
path = "src/main.rs"

[dependencies]
local-llm-config.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
