[package]
name = "local-llm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Config schema, validation and llama-swap generation for local-llm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
