[package]
name = "local-llm-resourced"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "local-llm resource manager daemon: config watcher, generator and monitor"

[[bin]]
name = "local-llm-resourced"
path = "src/main.rs"

[dependencies]
local-llm-config.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
notify.workspace = true
sd-notify.workspace = true
